# hermes-mesh

./: .gitignore  LICENSE  README.md  SPEC.md  pyproject.toml
hermes_mesh/: __init__.py  float.py  identity.py  session_relay.py  signatures.py
tests/: test_mesh.py
